// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hosts query fetch host with canonical facts 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "canonical_facts": Object {
          "fqdn": "fqdn.test03.rhel7.jharting.local",
          "insights_id": "371e0253-b145-4428-9f7a-7d934aad983d",
          "satellite_id": "ce87bfac-a6cb-43a0-80ce-95d9669db71f",
          "subscription_manager_id": "1d073c47-8467-4372-b585-7b0d40d2ee3c",
        },
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
      },
    ],
  },
}
`;

exports[`hosts query fetch hosts 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "modified_on": "2019-02-10T08:07:03.354312Z",
      },
      Object {
        "account": "test",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "modified_on": "2019-01-10T08:07:03.354312Z",
      },
      Object {
        "account": "test",
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "modified_on": "2019-03-10T08:07:03.354312Z",
      },
    ],
  },
}
`;

exports[`hosts query ordering display_name ASC 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "modified_on": "2019-02-10T08:07:03.354312Z",
      },
      Object {
        "account": "test",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "modified_on": "2019-01-10T08:07:03.354312Z",
      },
      Object {
        "account": "test",
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "modified_on": "2019-03-10T08:07:03.354312Z",
      },
    ],
  },
}
`;

exports[`hosts query ordering display_name DESC 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "modified_on": "2019-03-10T08:07:03.354312Z",
      },
      Object {
        "account": "test",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "modified_on": "2019-01-10T08:07:03.354312Z",
      },
      Object {
        "account": "test",
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "modified_on": "2019-02-10T08:07:03.354312Z",
      },
    ],
  },
}
`;

exports[`hosts query ordering modified_on DESC 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "modified_on": "2019-03-10T08:07:03.354312Z",
      },
      Object {
        "account": "test",
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "modified_on": "2019-02-10T08:07:03.354312Z",
      },
      Object {
        "account": "test",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "modified_on": "2019-01-10T08:07:03.354312Z",
      },
    ],
  },
}
`;

exports[`hosts query queries compound 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "modified_on": "2019-01-10T08:07:03.354312Z",
      },
      Object {
        "account": "test",
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "modified_on": "2019-03-10T08:07:03.354312Z",
      },
    ],
  },
}
`;

exports[`hosts query queries system_profile arch 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "modified_on": "2019-02-10T08:07:03.354312Z",
      },
      Object {
        "account": "test",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "modified_on": "2019-01-10T08:07:03.354312Z",
      },
      Object {
        "account": "test",
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "modified_on": "2019-03-10T08:07:03.354312Z",
      },
    ],
  },
}
`;

exports[`hosts query queries system_profile os_infrastructure_type 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "display_name": "test01.rhel7.jharting.local",
        "id": "6e7b6317-0a2d-4552-a2f2-b7da0aece49d",
        "modified_on": "2019-02-10T08:07:03.354312Z",
      },
      Object {
        "account": "test",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "modified_on": "2019-01-10T08:07:03.354312Z",
      },
    ],
  },
}
`;

exports[`hosts query queries system_profile os_release 1`] = `
Object {
  "hosts": Object {
    "data": Array [
      Object {
        "account": "test",
        "display_name": "test02.rhel7.jharting.local",
        "id": "22cd8e39-13bb-4d02-8316-84b850dc5136",
        "modified_on": "2019-01-10T08:07:03.354312Z",
      },
      Object {
        "account": "test",
        "display_name": "test03.rhel7.jharting.local",
        "id": "f5ac67e1-ad65-4b62-bc27-845cc6d4bcee",
        "modified_on": "2019-03-10T08:07:03.354312Z",
      },
    ],
  },
}
`;
